--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Books</title>
 </head>
 <body>
 
@@ -14,19 +14,19 @@
     <form class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input  id="title" type="text" class="validate">
+                <input  id="title" type="text" >
                 <label for="title">Title</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input  id="author" type="text" class="validate">
+                <input  id="author" type="text" >
                 <label for="author">Author</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input  id="isbn" type="text" class="validate">
+                <input  id="isbn" type="number" >
                 <label for="isbn">ISBN#</label>
             </div>
         </div>
@@ -40,27 +40,19 @@
         <th>Title</th>
         <th>Author</th>
         <th>ISBN</th>
+        <th>Kustuta</th>
     </tr>
     </thead>
 
     <tbody>
     <tr>
-        <td>Tõde ja Õigus</td>
-        <td>A.H.Tammsaare</td>
-        <td>123789</td>
-    </tr>
-    <tr>
-        <td>midagi</td>
-        <td>Jellybean</td>
-        <td>$3.76</td>
-    </tr>
-    <tr>
-        <td>tühjus</td>
-        <td>Lollipop</td>
-        <td>$7.00</td>
     </tr>
     </tbody>
+
 </table>
+<a href="#" class="btn red" id="delete-tasks">
+    YEETED AND DELETED
+</a>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
