Salvestab raamatuid mällu, kuid delete nupp ei tööta veel korralikult

--- a/index.html
+++ b/index.html
@@ -50,10 +50,20 @@
     </tbody>
 
 </table>
-<a href="#" class="btn red" id="delete-tasks">
+<a href="#" class="btn red" id="delete-books">
     YEETED AND DELETED
 </a>
 
+
+<!--<div class="card-action">-->
+<!--    <h4>Tasks</h4>-->
+<!--    <ul class="collection">-->
+
+<!--    </ul>-->
+<!--    <a href="#" class="btn red" id="delete-tasks">-->
+<!--        YEETED AND DELETED-->
+<!--    </a>-->
+<!--</div>-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"> </script>
