üksikuid raamatuid saab kustutada nüüd, kuid delete all nupp ei tööta endiselt :(

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </form>
 </div>
 
-<table>
+<table id="myTable">
     <thead>
     <tr>
         <th>Title</th>
@@ -46,13 +46,17 @@
 
     <tbody>
     <tr>
+    <tr>
+
+    </tr>
     </tr>
     </tbody>
 
 </table>
 <a href="#" class="btn red" id="delete-books">
-    YEETED AND DELETED
+    DELETE ALL
 </a>
+
 
 
 <!--<div class="card-action">-->
